add_executable(test_publisher helloworld/publisher.cpp helloworld/HelloWorldData.cpp)
target_link_libraries(test_publisher unitree_sdk)

#add_executable(test_subscriber helloworld/subscriber.cpp helloworld/HelloWorldData.cpp)
#target_link_libraries(test_subscriber unitree_sdk)
#
#add_executable(high_follow_sin high_level/follow_sin.cpp)
#target_link_libraries(high_follow_sin unitree_sdk)
#
#add_executable(sportmode_test high_level/sportmode_test.cpp)
#target_link_libraries(sportmode_test unitree_sdk)
#
#add_executable(low_level low_level/low_level.cpp)
#target_link_libraries(low_level unitree_sdk)
#
#add_executable(stand_example_go2 low_level/stand_example_go2.cpp)
#target_link_libraries(stand_example_go2 unitree_sdk)
#
#add_executable(stand_example_b2  low_level/stand_example_b2.cpp)
#target_link_libraries(stand_example_b2 unitree_sdk)
#
#add_executable(wireless wireless/wireless.cpp)
#target_link_libraries(wireless unitree_sdk)
#
#add_executable(advanced_gamepad advanced_gamepad/main.cpp)
#target_link_libraries(advanced_gamepad unitree_sdk)
#
#add_executable(state_machine_example state_machine/main.cpp)
#target_link_libraries(state_machine_example unitree_sdk)
#
#add_executable(test_jsonize jsonize/test_jsonize.cpp)
#target_link_libraries(test_jsonize unitree_sdk)
#
#add_executable(robot_state_client_example client/robot_state_client_example.cpp)
#target_link_libraries(robot_state_client_example unitree_sdk)
#
#add_executable(sport_client_example client/sport_client_example.cpp)
#target_link_libraries(sport_client_example unitree_sdk)
#
#add_executable(video_client_example client/video_client_example.cpp)
#target_link_libraries(video_client_example unitree_sdk)
#
#add_executable(vui_client_example client/vui_client_example.cpp)
#target_link_libraries(vui_client_example unitree_sdk)
#
#add_executable(h1_arm_sdk_dds_example humanoid/high_level/h1_arm_sdk_dds_example.cpp)
#target_link_libraries(h1_arm_sdk_dds_example unitree_sdk)
#
#add_executable(h1_loco_example_client humanoid/high_level/h1_loco_example_client.cpp)
#target_link_libraries(h1_loco_example_client unitree_sdk)
#
#add_executable(h1_low_level_example humanoid/low_level/humanoid.cpp)
#target_link_libraries(h1_low_level_example unitree_sdk)
