add_executable(a2_sport_client  a2_sport_client.cpp)
target_link_libraries(a2_sport_client unitree_sdk2)

add_executable(a2_sport_state  a2_sport_state.cpp)
target_link_libraries(a2_sport_state unitree_sdk2)

add_executable(a2_audio_client_example  audio/a2_audio_client_example.cpp)
target_link_libraries(a2_audio_client_example unitree_sdk2)
