add_executable(h1_arm_sdk_dds_example high_level/h1_arm_sdk_dds_example.cpp)
target_link_libraries(h1_arm_sdk_dds_example unitree_sdk)

add_executable(h1_loco_example_client high_level/h1_loco_example_client.cpp)
target_link_libraries(h1_loco_example_client unitree_sdk)

add_executable(h1_low_level_example low_level/humanoid.cpp)
target_link_libraries(h1_low_level_example unitree_sdk)