add_executable(low_level low_level.cpp)
target_link_libraries(low_level unitree_sdk2)

add_executable(stand_example_go2 stand_example_go2.cpp)
target_link_libraries(stand_example_go2 unitree_sdk2)

add_executable(stand_example_b2  stand_example_b2.cpp)
target_link_libraries(stand_example_b2 unitree_sdk2)